Added receipts for customer orders and checkout button.
Co-authored-by: stefanescuowen-cmd <stefanescuowen-cmd@users.noreply.github.com>

--- a/StyleSheets/accountStyle.css
+++ b/StyleSheets/accountStyle.css
@@ -94,3 +94,10 @@
     font-size: 1.1rem;
     font-family: "Mulish", Arial, Helvetica, sans-serif;
 }
+
+@media screen and (max-width: 500px)
+{
+    #custInfoEditBoxes {
+        margin-left: .5rem;
+    }
+}
