--- a/StyleSheets/about.css
+++ b/StyleSheets/about.css
@@ -5,13 +5,18 @@
     margin-bottom: 10px;
 }
 
+.about-wrapper h3 {
+    margin-top: 3rem;
+}
+
 .flex1, .flex2, .flex3{
     margin-bottom: 30px;
 }
 
 .flex3{
     width: 30%;
-    height: auto;
+    display: flex;
+    flex-direction: column;
     margin: 1%;
 }
 
@@ -32,6 +37,10 @@
     margin: 0 auto
 }
 
+.flex3 p {
+    margin-bottom: auto;
+}
+
 .about-style{
     background-color: white;
     border: 5px solid #9B3B23;
@@ -49,14 +58,23 @@
 }
 
 .aboutRow {
-    margin: 3rem;
+    margin: 0 .5rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    gap: 1rem;
 }
 
-@media screen and (max-width: 768px){
-    
+@media screen and (max-width: 1100px){
+    .flex2, .flex3{
+        width:45%
+    }
+    .flexBoxContainer {
+        flex-wrap: wrap;
+    }
 }
 
-@media screen and (max-width:480px){
+@media screen and (max-width:768px){
     .flex2, .flex3{
         width:100%
     }
