--- a/StyleSheets/checkout.css
+++ b/StyleSheets/checkout.css
@@ -69,6 +69,10 @@
 
 
 /* CHECKOUT FORMS */
+#guestCheckoutForm h3:not(:first-of-type) {
+    margin-top: 1rem;
+}
+
 #guestCheckoutForm, #userCheckoutForm{
     display: flex;
     flex-direction: column;
@@ -275,5 +279,5 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1rem 0;
+    margin: 0 0 1rem 0;
 }
