--- a/StyleSheets/about.css
+++ b/StyleSheets/about.css
@@ -65,12 +65,34 @@
     gap: 1rem;
 }
 
+#pathImages {
+    display: flex;
+    justify-content: space-around;
+}
+
+#pathImages img {
+    width: 30%;
+    margin: 1rem;
+    border-radius: 25px;
+    border: 5px solid #9B3B23;
+}
+
 @media screen and (max-width: 1100px){
     .flex2, .flex3{
         width:45%
     }
     .flexBoxContainer {
         flex-wrap: wrap;
+    }
+
+    #pathImages {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #pathImages img {
+        width: 60%;
     }
 }
 
@@ -83,5 +105,8 @@
     }
     .flexBoxContainer {
         padding: .1rem;
+    }
+    #pathImages img {
+        width: 100%;
     }
 }
