--- a/StyleSheets/menu.css
+++ b/StyleSheets/menu.css
@@ -108,6 +108,7 @@
     border: 3px solid #190D08;
     border-radius: 10px;
     padding: 0.1rem 0rem 0.1rem 0.3rem;
+    margin-right: 1rem;
 }
 #checkoutItems {
     text-align: center;
